src/visionlouisville/static/css/styles.css
/* ... */
.moment-media {
  display: block;
  margin: 10px 0;
  width: 100%;
}
.moment-text {
  font-size: x-large;
  font-weight: 600;
}
.moment-author {
  font-weight: 400;
  line-height: 1;
  font-size: large;
}
.vision-list .user-link {
  margin-top: 5px;
  margin-bottom: 0;
}
.vision-list .vision-title {
  font-weight: 400;
}
.vision-link {
  display: block;
  padding: 0 10px 0 40px;
  margin-left: -40px;
  text-decoration: none;
}
.vision-list-category-icon {
  float: right;
  color: #b2b2a6;
  padding: 5px 0 10px;
}

/* Support */
.support,
a.support {
  color: #ef037d;
  font-weight: 600;
  padding: 5px 0 10px;
  float: left;
}
.heart {
  display: block;
  background-color: #d5d5c6;
  box-shadow: inset 0 0.75em 0.75em rgba(255,255,255,0.5);
  width: 26px;
  height: 21px;
  font-size: 21px;
}
.vision-header a.support {
  display: block;
  width: 50px;
  position: absolute;
  z-index: 3;
  top: 56px;
  left: -13px;
  font-size: large;
  text-align: center;
  text-decoration: none;
  padding: 0;
}
.vision-header a.support .heart {
  margin-left: 11px;
}
.supported .heart {
  background-color: #ef037d;
}
.support-count {
  color: #ef037d;
  font-weight: 800;
}
.heart-inline {
  display: inline-block;
  height: 1.25em;
  width: auto;
  margin-bottom: -0.25em;
  font-size: 1em;
}
.support-login-prompt {
  position: absolute;
  z-index: 2;
  top: 48px;
  left: -10px;
  background: #fff;
  padding: 15px 15px 15px 50px;
  box-shadow: 0 0 10px rgba(0,0,0,0.5);
  border-radius: 0 6px 6px 0;
}

/* Vision Form */
.category-icon + img {
  background-color: #b2b2a6;
  cursor: pointer;
}
.category-icon:checked + img {
  background-color: #268099;
}
.vision-category-list {
  float: left;
  width: 100%;
}
.vision-category-list li {
  float: left;
  width: 14%;
  padding: 0;
  margin: 0;
}
.vision-category-list img {
  width: 100%;
  height: auto;
  display: block;
}

a.category-list-link {
  background: #b2b2a6;
  display: block;
  margin-bottom: 10px;
}
.is-current-economy .vision-category-economy a.category-list-link,
.is-current-health .vision-category-health a.category-list-link,
.is-current-energy .vision-category-energy a.category-list-link,
.is-current-living .vision-category-living a.category-list-link,
.is-current-connectivity .vision-category-connectivity a.category-list-link,
.is-current-identity .vision-category-identity a.category-list-link,
.is-current-creativity .vision-category-creativity a.category-list-link {
  background-color: #268099;
}

h6.category-prompt {
  margin: -10px 0 10px;
}
.category-title {
  color: #268099;
}

.on-off-switch-label {
  line-height: 34px;
}
.on-off-switch-icon {
  display: inline-block;
  width: 60px;
  height: 34px;
  overflow: hidden;
  cursor: pointer;
}
.on-off-switch-icon img {
  width: 100%;
  position: relative;
  top: -34px;
}
.on-off-switch:checked + .on-off-switch-icon img {
  width: 100%;
  top: 0;
}

/* Reply Form */
.reply-form {
}
.reply-text {
  height: 4.5em;
  margin-bottom: 10px;
}
.reply-count {
  font-size: medium;
  font-weight: 800;
  background-color: #a1cbcf;
  float: right;
  margin: -10px 10px 0 0;
  padding: 0.25em 0.5em;
}
.reply-btn {
}

/* Swiper */
.vision-gallery {
  position: relative;
  padding-bottom: 15px;
  margin-bottom: 5px;
}
.swiper-container {
  width: 100%;
  height: auto;
  margin-bottom: 10px;
}
.swiper-slide {
  width: 100%;
/*  height: 100%;*/
  height: auto !important;
  opacity: 0;
  -webkit-transition: opacity 1.2s;
          transition: opacity 1.2s;
}
.swiper-slide-active { }
.swiper-slide-visible { opacity: 1; }
.swiper-pagination-switch {}
.swiper-active-switch {}
.swiper-visible-switch {}

.swiper-slide .vision {
  padding: 0 0 0 40px;
  margin: 5px 10px;
  background: #fff;
  box-shadow: 0 0 5px rgba(0,0,0,0.2);
}
.swiper-slide .user-link {
  margin-top: 5px;
}
.swiper-slide .vision p {
  margin: 0;
}
.pagination {
  position: absolute;
  left: 0;
  text-align: center;
  bottom: 5px;
  width: 100%;
}
.swiper-pagination-switch {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 10px;
  background: #b2b2a6;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.5);
  margin: 0 3px;
  cursor: pointer;
}
.swiper-active-switch {
  background: #48a5bf;
}


/* =Welcome Message
-------------------------------------------------------------- */

.welcome {
  margin-top: -20px;
  margin-bottom: 15px;
  padding: 15px 10px 1px 10px;
  background: #808073;
  color: #e7e7d7;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
  box-shadow: 0 1px 0 rgba(255,255,255,0.75), inset 0 -3px 3px rgba(0,0,0,0.1);
}
.welcome a {
  color: #7ec4d8;
}
a.welcome-close-btn {
  float: right;
  width: 1.25em;
  height: 1.25em;
  color: #444;
  text-shadow: none;
  font-size: xx-large;
  text-decoration: none;
  line-height: 1.25em;
  text-align: center;
  margin: -15px -10px 0 0;
}
.welcome-avatar {
  float: left;
  width: 50px;
  height: 50px;
  margin: 5px 10px 20px -55px;
}
.welcome-header {
  padding-left: 55px;
  margin-bottom: 1em;
}
.welcome h1, .welcome h2, .welcome h3, .welcome h4, .welcome h5, .welcome h6 {
  color: #fff;
  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}
.welcome-prequestion {
  display: block;
}
.welcome-question {
  display: inline;
  font-size: 1.25em;
  font-weight: 700;
  line-height: 1.2;
}
.welcome-more-link {
  text-transform: uppercase;
  text-decoration: none;
  font-weight: 600;
  white-space: nowrap;
  font-size: 0.8em;
}


/* =User Lists
-------------------------------------------------------------- */

ul.user-list {
  clear: both;
  margin-bottom: 10px;
}
.user-list li {
  display: inline;
}
.user-list li a,
.user-list li .pretend-a {
  float: left;
  width: 10%;
}
.user-list .avatar {
  border-radius: 0;
  width: 100%;
  height: auto;
}

/* =Media Queries for Responsive Layout
-------------------------------------------------------------- */

@media only screen and (min-width: 320px) {
}
/* ... */

